Remove all of Alltid.
Conflicts:

	content/forum/staff-marker.js
	content/links/links-team.js
	content/shortcuts-and-tweaks/team-popup-links.js
	res/links.json

git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.8@7992 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -105,7 +105,7 @@ foxtrick.LinksClubTransfers.desc=Adds some external links to the club transfer p
 foxtrick.ForumAlterHeaderLine.desc=Alters posting header line
 foxtrick.Singleline2.desc=Alternative ForumHeader single line module. Slightly faster than the other versions. Disables some conflicting forum post changing modules.
 # please translate next lines again if needed
-foxtrick.ForumAlterHeaderLine.SingleHeaderLine.desc=Displays only one posting header line. This option may break forum design. If you experience that, use 'normal skin', change the number of displayed flags in the header (ie use MoveLinks instead of AlltidFlags) or activate some of the following options.
+foxtrick.ForumAlterHeaderLine.SingleHeaderLine.desc=Displays only one posting header line. This option may break forum design. If you experience that, then use standard theme, and activate some of the following options.
 foxtrick.ForumAlterHeaderLine.HideOldTime.desc=Hides hours if posting is from day before or older
 foxtrick.ForumAlterHeaderLine.TruncateLongNick.desc=Shows only the first 10 (simple)/14 (normal) characters of long aliases in forum posts. With CheckDesign on it's only done when needed.
 foxtrick.ForumAlterHeaderLine.TruncateLeagueName.desc=Shows only the division.
@@ -251,7 +251,6 @@ foxtrick.TeamPopupLinks.TeamLinks.desc=Add popups to team links
 foxtrick.TeamPopupLinks.UserLinks.desc=Add popups to manager links
 foxtrick.TeamPopupLinks.Manager.desc=Manager (for team links only)
 foxtrick.TeamPopupLinks.Team.desc=Team (for manager links only)
-foxtrick.TeamPopupLinks.TeamAtAlltid.desc=Team page at Alltid
 foxtrick.TeamPopupLinks.Matches.desc=Matches
 foxtrick.TeamPopupLinks.Players.desc=Players
 foxtrick.TeamPopupLinks.last_5_ips.desc=5 latest logins
@@ -660,7 +659,7 @@ foxtrick.linkscustom.confirmremove=Really remove?
 foxtrick.linkscustom.addtag=Add a tag
 foxtrick.linkscustom.tags=Tags
 foxtrick.linkscustom.help=Help
-foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example: http: \/\/alltid.org\/league\/427\/). For internal static links skip the server part (Example: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http:\/\/alltid.org\/league\/[leagueid] would always lead you to the Alltid page of the series you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
+foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example: http:\/\/example.org\/league\/427\/). For internal static links skip the server part (Example: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http:\/\/example.org\/league\/[leagueid] would always lead you to the page of the series with the ID that you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
 foxtrick.linkscustom.helptext2=You also can export your links and share them. To do this you can click on the export button and select a file to save that link. Links are append to that file, hence you can save several links in one file. To import links go to the preference dialog and go to import preferences. Only the entries in the selected file will be imported, which in this case are your links. None of your previous links will be deleted.
 foxtrick.matches.income=Income:
 foxtrick.tweaks.Birthdays=Birthdays
@@ -749,7 +748,6 @@ copy.table=Copy Table in HT-ML
 #teampopups
 Manager=Manager
 Team=Team
-TeamAtAlltid=Team at Alltid
 Matches=Matches
 Players=Players
 last_5_ips=5 latest logins
