added chromes optional_permissions
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8043 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -56,7 +56,7 @@ foxtrick.TeamPopupLinks.desc=Displays a small pop-up window with quick links whe
 foxtrick.StaffMarker.desc=Marks officials' nicks on the forums and on team pages.
 foxtrick.StaffMarker.manager.desc=Mark officials' nicks on team pages.
 foxtrick.StaffMarker.own.desc=Custom markers in JSON format with user ID as key and style as value, e.g. {"1001" : "color: red;", "1002" : "background-color: yellow;"}
-foxtrick.StaffMarker.flag.desc=Adds flags to users in the select box
+foxtrick.StaffMarker.HT-Youthclub.desc=Mark HT-Youthclub staff
 #ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Displays a linkbar for the youth academy (Also works for mail, Press announcements, Guestbook and Ads)
 foxtrick.ForumYouthIcons.q.desc=Adds icon for quote tags if missing
@@ -1169,5 +1169,6 @@ foxtrick.prefs.AdditionalOptions=General options
 foxtrick.prefs.smallcopyicons=Show copy icons in the header instead of sidebar
 foxtrick.prefs.DisplayHTMLDebugOutput=Show FoxTrick log on bottom of pages (for debugging)
 
+foxtrick.prefs.permissionsHint=%s needs permission to work. Allow access in the following dialog.
 
 ###EOF
