--- a/manifest.json
+++ b/manifest.json
@@ -194,8 +194,14 @@
 		"clipboardWrite",
 		"*://chpp.hattrick.org/*",
 		"*://*.foxtrick.org/*",
-		"http://www.hattrick-youthclub.org/*",
 		"http://www.fantamondi.it/*"
+	],
+	"optional_permissions" : [
+		"http://www.hattrick-youthclub.org/*",
+		"http://stream.ht-radio.nl/*",
+		"http://no9-online.de/*",
+		"http://www.latehome.de/*",
+		"http://radio-balkadio.com/*"
 	],
 	"page_action": {
 		"default_icon": "skin/icon-24.png",
