Embed Media. Optionally use oEmbed for embedding using chromes dynamic permission control. Added soundcloud, flickr and deviantart using oembed.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8054 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -85,6 +85,11 @@ foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Embed YouTube videos
 foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Embed Vimeo videos
 foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Embed FunnyOrDie videos
 foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Embed Dailymotion videos
+foxtrick.EmbedMedia.EmbedModeOEmebed.desc=Use oEmbed to embed media. All option below require this feature. (Chrome only) 
+foxtrick.EmbedMedia.ReplaceLinksByTitles.desc=Replace the link text by the label of the media item, e.g. the image name (Chrome only) 
+foxtrick.EmbedMedia.EmbedSoundCloud.desc=Embed Soundcloud (Chrome only) 
+foxtrick.EmbedMedia.EmbedFlickrImages.desc=Embed Flickr images (Chrome only) 
+foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Embed Deviantart images (Chrome only) 
 #Forum direct page links
 foxtrick.DirectPageLinks.desc=Adds links that allow you to jump to a certain page in a Forum thread.
 #
