preferences: added revokePermissions (main purpose for now is testing setting permissions)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8056 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1058,6 +1058,7 @@ button.import=Import
 button.restoreDefault=Restore default
 button.deleteToken=Delete token
 button.disableAll=Disable all
+button.revokePermissions=Revoke permissions
 
 status.loading=Loading…
 status.loading.abbr=…
@@ -1125,6 +1126,7 @@ foxtrick.prefs.oauth.delete=Delete OAuth token/secret for the selected team.
 # NOTE - please preserve the braces, inner content will be converted to link
 foxtrick.prefs.oauth.delete.desc=Only applies to this browser. To entirely revoke FoxTrick's access for a team, use Hattrick's {CHPP management}.
 foxtrick.prefs.labelDisableAll=Disable all modules
+foxtrick.prefs.labelRevokePermissions=Revoke all optional permissions (Chrome only)
 foxtrick.prefs.labelSavePrefs=Export preferences and/or personal settings
 foxtrick.prefs.labelSavePrefs_Prefs=Preferences
 foxtrick.prefs.labelSavePrefs_Notes=Personal settings (Templates, custom links, and transfer filters)
@@ -1168,6 +1170,7 @@ prefs.view.by.page=View by last HT page
 delete_foxtrick_branches_ask=Are you sure you want to restore to default settings?
 delete_oauth_ask=Delete OAuth token/secret for teamid %s? 
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
+revoke_permissions_ask=Are you sure you want to revoke all optional permissions?
 
 foxtrick.prefs.AdditionalOptions=General options
 foxtrick.prefs.smallcopyicons=Show copy icons in the header instead of sidebar
