avg ratings in hatstats. renamed ratings-range.js into ratings-display.js
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8091 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -373,7 +373,9 @@ foxtrick.MatchSimulator.RatingsBellow.desc=Displays prediction bellow
 foxtrick.MatchSimulator.RatingsRight.desc=Displays prediction on the right
 foxtrick.HeaderToggle.desc=Clicking on h2-headers toggles showing and hiding of the following section. Remembers last setting individually based on page type and header title
 foxtrick.Filter.desc=Adds filters to top players page
-foxtrick.RatingsRange.desc=Displays average ratings in statistics in the 0-20 range
+foxtrick.RatingsDisplay.desc=Displays average ratings in a different style
+foxtrick.RatingsDisplay.DenominationsRange.desc=In the 0-20 denominations range
+foxtrick.RatingsDisplay.HatStats.desc=As HatStats
 
 # -----------------------------------------------------------------------------
 
