--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -285,6 +285,7 @@ foxtrick.TeamPopupLinks.AddNextMatch.desc=Adds next match to HT Live
 foxtrick.TeamPopupLinks.YouthMatches.desc=Youth matches
 foxtrick.TeamPopupLinks.Coach.desc=Coach
 foxtrick.TeamPopupLinks.CustomLink.desc=Custom links. The tags [userid] and [teamid] will be replaced by the actual IDs.
+foxtrick.TeamPopupLinks.OpenInNewTab.desc=Open links in new tab
 foxtrick.SkillColoring.desc=Better visualisation of skills
 foxtrick.SkillColoring.skill_color.desc=Colorises skills
 foxtrick.SkillColoring.only_skill_color.desc=Colorises skills only and not personalities, fan mood etc.
