team-popup-links.js : Individual settings (open in new tab) for all links instead of 1 option for all.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8137 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -285,7 +285,6 @@ foxtrick.TeamPopupLinks.AddNextMatch.desc=Adds next match to HT Live
 foxtrick.TeamPopupLinks.YouthMatches.desc=Youth matches
 foxtrick.TeamPopupLinks.Coach.desc=Coach
 foxtrick.TeamPopupLinks.CustomLink.desc=Custom links. The tags [userid] and [teamid] will be replaced by the actual IDs.
-foxtrick.TeamPopupLinks.OpenInNewTab.desc=Open links in new tab
 foxtrick.SkillColoring.desc=Better visualisation of skills
 foxtrick.SkillColoring.skill_color.desc=Colorises skills
 foxtrick.SkillColoring.only_skill_color.desc=Colorises skills only and not personalities, fan mood etc.
@@ -883,6 +882,7 @@ less=less...
 TeamPopupLinks.prefsCaption=Link preferences
 TeamPopupLinks.ShowByDefault=Show by default
 TeamPopupLinks.ShowOnMore=Show on more
+TeamPopupLinks.OpenNewTab=Open in new tab
 
 total_stars=Total stars
 
