foxtrick.tweaks.skilltablecopied was misleading
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8192 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -834,7 +834,7 @@ SpecialPaste.desc=Paste with Shift + Left Click.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=Copy skill table to clipboard (in HT-ML)
-foxtrick.tweaks.skilltablecopied=The skill table source has been copied to the clipboard.
+foxtrick.tweaks.skilltablecopied=The skill table has been copied to the clipboard.
 foxtrick.tweaks.matchidcopied=The match ID has been copied to the clipboard.
 foxtrick.tweaks.postidcopied=Post ID [post=%s] has been copied to the clipboard.
 foxtrick.tweaks.postingcopied=Posting %s has been copied to the clipboard.
