export prefs: added OAuth option fixing i875
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8194 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1133,6 +1133,7 @@ foxtrick.prefs.labelRevokePermissions=Revoke all optional permissions (Chrome on
 foxtrick.prefs.labelSavePrefs=Export preferences and/or personal settings
 foxtrick.prefs.labelSavePrefs_Prefs=Preferences
 foxtrick.prefs.labelSavePrefs_Notes=Personal settings (Templates, custom links, and transfer filters)
+foxtrick.prefs.labelSavePrefs_Token=OAuth token/secret
 foxtrick.prefs.saveNotice=Copy the content in the text area and save as a file, so you could import the preferences in the future.
 foxtrick.prefs.labelLoadPrefs=Import preferences (Current preferences will be overwritten)
 foxtrick.prefs.loadNotice=Paste your saved preferences in the text area and press "Import" to import your preferences.
