--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -563,6 +563,7 @@ matchOrder.AddMatchManually=Add a match manually
 matchOrder.swapPositions=Swap positions
 matchOrder.options=Options
 matchOrder.staminaDiscount=Stamina discount
+matchOrder.staminaDiscount.title=Sector ratings are discounted according to players contribution to that sector
 matchOrder.summary=Summary
 
 #Skills
@@ -1038,6 +1039,7 @@ sort.up=Up
 sort.down=Down
 action.clearCache=Clear cache
 action.clearCache.title=Clears FoxTricks Xml cache. FoxTrick downsloads extra information from Hattrick's servers on demand. Untill you close your browser, FoxTrick will use locally stored copies of those afterwards. On rare occasions they can get outdated. Clear the cache if you want FoxTrick to download those extra informations again.
+featureHighlight.title=Click to highlight most of FoxTrick's features
 
 # fennec ui
 pageAction.rightSidebar=Show right bar
