New Module: ForumModeratorIconLinks - When moderator options are available they can be accessed via ht-style icons on the top of the thread page.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8245 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -149,6 +149,7 @@ foxtrick.ConfirmActions.StaffChange.desc=Hiring/firing staffs
 foxtrick.PersonalityImages.desc=Add coloured numbers for popularity, character and psyche on the player page
 foxtrick.HideSignatures.desc=Hide the signatures in forum posts, display a 'Signature' link instead
 foxtrick.MarkUnread.desc=Adds a link to mark all postings unread from the actual one
+foxtrick.ForumModeratorIconLinks.desc=Add icons to access moderator features on top of threads when available
 foxtrick.ForumNextAndPrevious.desc=Remove the 'Next' and 'Previous' buttons on forum threads if they are disabled
 foxtrick.ForumLastPost.desc=Jump to last posting instead of jumping to the first posting of read threads
 foxtrick.ForumLastPost.lastpage.desc=Jump to last page, not last posting
