embed-media : Embed direct picture links. Will probably need some kind of blacklist/replacement feature for most common image hosters that screw this with modrewrite or so.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8269 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -90,6 +90,7 @@ foxtrick.EmbedMedia.ReplaceLinksByTitles.desc=Replace the link text by the label
 foxtrick.EmbedMedia.EmbedSoundCloud.desc=Embed Soundcloud
 foxtrick.EmbedMedia.EmbedFlickrImages.desc=Embed Flickr images
 foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Embed Deviantart images
+foxtrick.EmbedMedia.EmbedGenericImages.desc=Embed images if the link is a link to an image
 #Forum direct page links
 foxtrick.DirectPageLinks.desc=Adds links that allow you to jump to a certain page in a Forum thread.
 #
@@ -382,6 +383,9 @@ foxtrick.RatingsDisplay.HatStats.desc=As HatStats
 
 
 # IN-GAME STRINGS. translate first
+
+#Embed Media
+foxtrick.EmbedMedia.EmbeddedImage=Embedded Image
 
 #icons
 foxtrick.ExtraShortcuts.statistics=Statistics
