--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -91,6 +91,7 @@ foxtrick.EmbedMedia.EmbedSoundCloud.desc=Embed Soundcloud
 foxtrick.EmbedMedia.EmbedFlickrImages.desc=Embed Flickr images
 foxtrick.EmbedMedia.EmbedDeviantArtImages.desc=Embed Deviantart images
 foxtrick.EmbedMedia.EmbedGenericImages.desc=Embed images if the link is a link to an image
+foxtrick.EmbedMedia.EmbedGenericImagesClever.desc=Try to guess the correct image address even if the original link does not initially appear to be pointing at an image.
 #Forum direct page links
 foxtrick.DirectPageLinks.desc=Adds links that allow you to jump to a certain page in a Forum thread.
 #
