update-tmpl-safari.plist: use same identifier as info.plist
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8329 1e3807c3-0949-0410-b78e-337b627472c1

--- a/maintainer/update-tmpl-safari.plist
+++ b/maintainer/update-tmpl-safari.plist
@@ -6,7 +6,7 @@
 		<array>
 			<dict>
 				<key>CFBundleIdentifier</key>
-					<string>www.ht-foxtrick.com</string>
+					<string>www.foxtrick.org</string>
 				<key>Developer Identifier</key>
 					<string>8J4UNYVFR5</string>
 				<key>CFBundleVersion</key>
