safari: trying to fix it
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8342 1e3807c3-0949-0410-b78e-337b627472c1

--- a/maintainer/update-tmpl-safari.plist
+++ b/maintainer/update-tmpl-safari.plist
@@ -8,7 +8,7 @@
 				<key>CFBundleIdentifier</key>
 					<string>www.foxtrick.org</string>
 				<key>Developer Identifier</key>
-					<string>L78WRG6W77</string>
+					<string>8J4UNYVFR5</string>
 				<key>CFBundleVersion</key>
 					<string>{VERSION}</string>
 				<key>CFBundleShortVersionString</key>
