New Module: loyality-display.js : Own player page now shows indications of loyality / home grown bonuses, at 50% atm but prepared for 100%. Skill links etc. are unchanged by now.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8362 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -124,6 +124,7 @@ foxtrick.LinksAchievements.desc=Adds some external links to the achievements pag
 foxtrick.LinksStaff.desc=Adds some external links to the staff page
 foxtrick.LinksTracker.desc=Adds some external tracker links to the corresponding NT pages and player pages
 foxtrick.LinksClubTransfers.desc=Adds some external links to the club transfer page
+foxtrick.LoyalityDisplay.desc=Highlight the effect of loyality and mother club bonus on your person player page
 foxtrick.ForumAlterHeaderLine.desc=Alters posting header line
 foxtrick.Singleline2.desc=Alternative ForumHeader single line module. Slightly faster than the other versions. Disables some conflicting forum post changing modules.
 # please translate next lines again if needed
