--- a/manifest.json
+++ b/manifest.json
@@ -148,6 +148,7 @@
 			"content/presentation/large-flags.js",
 			"content/presentation/league-news-filter.js",
 			"content/presentation/local-time.js",
+			"content/presentation/loyality-display.js",
 			"content/presentation/match-tables.js",
 			"content/presentation/move-manager-online.js",
 			"content/presentation/move-player-select-box.js",
