LoyalityDisplay.desc - added warning for 'Skill bars only'
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8365 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -124,8 +124,8 @@ foxtrick.LinksAchievements.desc=Adds some external links to the achievements pag
 foxtrick.LinksStaff.desc=Adds some external links to the staff page
 foxtrick.LinksTracker.desc=Adds some external tracker links to the corresponding NT pages and player pages
 foxtrick.LinksClubTransfers.desc=Adds some external links to the club transfer page
-foxtrick.LoyalityDisplay.desc=Highlight the effect of loyality and mother club bonus on your personal player page
-foxtrick.ForumAlterHeaderLine.desc=Alters posting header line
+foxtrick.LoyalityDisplay.desc=Highlight the effect of loyality and mother club bonus on your personal player page (Works only with 'Show skill bars' option enabled in HT preferences)
+foxtrick.ForumAlterHeaderLine.desc=Alters posting header line 
 foxtrick.Singleline2.desc=Alternative ForumHeader single line module. Slightly faster than the other versions. Disables some conflicting forum post changing modules.
 # please translate next lines again if needed
 foxtrick.ForumAlterHeaderLine.SingleHeaderLine.desc=Displays only one posting header line. This option may break forum design. If you experience that, then use standard theme, and activate some of the following options.
