l10n: added plural forms for firefox, chrome etc uses last listed form
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8417 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -13,6 +13,8 @@
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
 direction=ltr
+#some strings use plural forms. for rules and pluralForm ids see https://developer.mozilla.org/en/Localization_and_Plurals
+pluralForm=1
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
@@ -996,7 +998,8 @@ CrossTable.noMatches=No matches has been played yet.
 
 # MyMonitor
 MyMonitor.header=My Monitor
-MyMonitor.teams=%s teams in monitor
+#uses pluralForms
+MyMonitor.teams=%s team in monitor;%s teams in monitor
 MyMonitor.add=Monitor this team
 MyMonitor.remove=Remove this team from my monitor
 MyMonitor.addHelp=Go to the team that you want to monitor, and you could see a box on the sidebar for adding the team.
