more pluralForms added. that's all actually
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8420 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -412,7 +412,8 @@ foxtrick.HistoryStats.cupwinner=Cup winner
 foxtrick.HistoryStats.cupwinner.short=CW
 
 # YouthPromotes
-YouthPromotes.future=Player can be promoted %1 day(s) later, on %2.
+#following string uses pluralForms
+YouthPromotes.future=Player can be promoted %1 day later, on %2.;Player can be promoted %1 days later, on %2.
 YouthPromotes.today=Player can be promoted today!
 
 # links
@@ -703,6 +704,7 @@ Last_stars_decline=Last star decline
 Last_stars_decline.abbr=Diff
 Last_position=Latest Position
 Last_position.abbr=Pos
+#following string uses pluralForms
 Last_match_played_as=Played %1 min as %2 in his last match.
 
 Bruised=Bruised
@@ -790,8 +792,10 @@ foxtrick.defensiveTrainer=A %s trainer who is defence-minded.
 foxtrick.offensiveTrainer=A %s trainer who is fond of attacking.
 foxtrick.balancedTrainer=A %s trainer who is neither attack nor defence-minded.
 
-notify.newMail=You have received %s new mail(s).
-notify.newForumMessage=There are %s new forum reply(s) to you.
+#following string uses pluralForms
+notify.newMail=You have received %s new mail.;You have received %s new mails.
+#following string uses pluralForms
+notify.newForumMessage=There are %s new forum reply to you.;There are %s new forum replies to you.
 
 htLive=HT Live
 
@@ -998,7 +1002,7 @@ CrossTable.noMatches=No matches has been played yet.
 
 # MyMonitor
 MyMonitor.header=My Monitor
-#uses pluralForms
+#following string uses pluralForms
 MyMonitor.teams=%s team in monitor;%s teams in monitor
 MyMonitor.add=Monitor this team
 MyMonitor.remove=Remove this team from my monitor
