--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -13,8 +13,8 @@
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
 direction=ltr
-#some strings use plural forms. for rules and pluralForm ids see https://developer.mozilla.org/en/Localization_and_Plurals
-pluralForm=1
+#some strings use plural forms. for rules and pluralFormRuleID see https://developer.mozilla.org/en/Localization_and_Plurals
+pluralFormRuleID=1
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
