PluralForm.js for chrome etc
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8425 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -44,6 +44,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/lib/oauth.js</string>
 				<string>content/lib/sha1.js</string>
 				<string>content/lib/jquery.js</string>
+				<string>content/lib/PluralForm.js</string>
 
 				<!-- utilities -->
 				<string>content/util/api.js</string>
