--- a/manifest.json
+++ b/manifest.json
@@ -34,6 +34,7 @@
 			"content/lib/jquery.js",
 			"content/lib/oauth.js",
 			"content/lib/sha1.js",
+			"content/lib/PluralForm.js",
 			
 			//<!-- core modules -->
 			"content/redirections.js",
