general bellow->below fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8474 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -75,12 +75,12 @@ foxtrick.ForumYouthIcons.youth_series.desc=Adds icon for YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textbox for better writing
 foxtrick.ForumYouthIcons.pre.desc=Adds icon for Forum 'pre' format
 foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expresions (Mask \ with additional \, eg \\.).
-foxtrick.ForumYouthIcons.symbols.desc=Adds icon for bellow symbols. Entries are separated by semi-colons. To use a semi-colon enter "/;".
+foxtrick.ForumYouthIcons.symbols.desc=Adds icon for below symbols. Entries are separated by semi-colons. To use a semi-colon enter "/;".
 foxtrick.ForumYouthIcons.debug.desc=Adds icon for FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Adds icon for FoxTrick settings
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e. 'pre' element)
-foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Shows nested qoutes in a spoiler. Specify the level bellow.
+foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Shows nested qoutes in a spoiler. Specify the level below.
 #EmbedMedia
 foxtrick.EmbedMedia.desc=Detects links to media files and embeds them into the site. (Experimental)
 foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Embed YouTube videos
@@ -375,7 +375,7 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Stay on the matchorder page after s
 foxtrick.MatchOrderInterface.SwapPositions.desc=Add a link to swap players left to right
 foxtrick.MatchSimulator.desc=Adds a match simulator to the match order interface.
 foxtrick.MatchSimulator.RatingsOnTop.desc=Keeps ratings prediction on top
-foxtrick.MatchSimulator.RatingsBellow.desc=Displays prediction bellow
+foxtrick.MatchSimulator.RatingsBelow.desc=Displays prediction below
 foxtrick.MatchSimulator.RatingsRight.desc=Displays prediction on the right
 foxtrick.HeaderToggle.desc=Clicking on h2-headers toggles showing and hiding of the following section. Remembers last setting individually based on page type and header title
 foxtrick.Filter.desc=Adds filters to top players page
