foxtrick.properties. dummy top strings
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8502 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1,6 +1,6 @@
-# MASTER language file
-# utf-8 encoded ENGLISH MASTER
-# By Developers
+properties.language=ENGLISH MASTER
+properties.version=HEAD
+properties.translators=Developers
 
 # Hints:
 # translate the right side of the = sign.
