general qoute -> quote fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8504 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1,3 +1,4 @@
+#used by translators to keep track. not used with foxtrick atm
 properties.language=ENGLISH MASTER
 properties.version=HEAD
 properties.translators=Developers
@@ -80,7 +81,7 @@ foxtrick.ForumYouthIcons.debug.desc=Adds icon for FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Adds icon for FoxTrick settings
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e. 'pre' element)
-foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Shows nested qoutes in a spoiler. Specify the level below.
+foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Shows nested quotes in a spoiler. Specify the level below.
 #EmbedMedia
 foxtrick.EmbedMedia.desc=Detects links to media files and embeds them into the site. (Experimental)
 foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Embed YouTube videos
@@ -517,7 +518,7 @@ ForumSpecialBBCode.forumSymbol=Insert "%s"
 ForumSpecialBBCode.symbols=Insert symbol: %s
 
 
-ShowNestedQoutes=Show nested qoutes
+ShowNestedQuotes=Show nested quotes
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Enter filter name:
