matchInterface: notplayed and date of match added
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8528 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -706,7 +706,8 @@ Last_stars_decline.abbr=Diff
 Last_position=Latest Position
 Last_position.abbr=Pos
 #following string uses pluralForms
-Last_match_played_as=Played %1 min as %2 in his last match.
+Last_match_played_as_at=Played %1 min as %2 in his last match on the %3.
+Last_match_didnot_play=Has not played yet.
 
 Bruised=Bruised
 Bruised.abbr=Bru
