--- a/Info.plist
+++ b/Info.plist
@@ -236,6 +236,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>*.hattrick.interia.pl</string>
 				<string>*.hattrick.uol.com.br</string>
 				<string>*.foxtrick.org</string>
+				<string>foxtrick.googlecode.com</string>
 				<string>www.hattrick-youthclub.org</string>
 				<string>www.fantamondi.it</string>
 			</array>
