player-filters.js: fill on 'add filters' select (more intuitive and needed for OsX+webkit)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8576 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -435,6 +435,7 @@ foxtrick.TeamStats.ActivePlayers.label=Active players
 foxtrick.TeamStats.HomeGrownPlayers.label=Homegrown players
 foxtrick.TeamStats.PurchasedPlayers.label=Purchased players
 
+
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Season overview
@@ -539,6 +540,7 @@ Filters.Form=Form
 Filters.XP=Experience
 Filters.specialty=Specialty
 Filters.stars=Stars
+Filters.addFilterOptions=Add filter options
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
@@ -1050,7 +1052,6 @@ Switch_view=Switch view
 Detach=Detach
 AddHomegrown=Add homegrown players
 showTimeInClub=Show time in club
-Filter=Filter
 sort.up=Up
 sort.down=Down
 action.clearCache=Clear cache
