--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,7 @@
 			"content/util/module.js",
 			"content/util/note.js",
 			"content/util/notify.js",
+			"content/util/sanitize.js",
 			"content/util/session-store.js",
 			"content/util/string.js",
 			"content/util/time.js",
