datetimestrings using pluralForms
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8593 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -544,15 +544,14 @@ Filters.addFilterOptions=Add filter options
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-foxtrick.datetimestrings.days=days
-foxtrick.datetimestrings.day=day
-# Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=days
-foxtrick.datetimestrings.hours=hr
-foxtrick.datetimestrings.minutes=min
-foxtrick.datetimestrings.short_seasons=s
-foxtrick.datetimestrings.short_weeks=wk
-foxtrick.datetimestrings.short_days=d
+#next 6 use pluralFroms
+foxtrick.datetimestrings.days=day;days
+foxtrick.datetimestrings.hours=hr;hrs
+foxtrick.datetimestrings.minutes=min;mins
+foxtrick.datetimestrings.short_seasons=s;s
+foxtrick.datetimestrings.short_weeks=wk;wk
+foxtrick.datetimestrings.short_days=d;d
+
 #Transfer prices
 transfercompare_medianprice=Median price
 transfercompare_avgprice=Average price
