--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -127,7 +127,7 @@ foxtrick.LinksAchievements.desc=Adds some external links to the achievements pag
 foxtrick.LinksStaff.desc=Adds some external links to the staff page
 foxtrick.LinksTracker.desc=Adds some external tracker links to the corresponding NT pages and player pages
 foxtrick.LinksClubTransfers.desc=Adds some external links to the club transfer page
-foxtrick.LoyalityDisplay.desc=Highlight the effect of loyalty and mother club bonus on your personal player page (Works only with 'Show skill bars' option enabled in HT preferences)
+foxtrick.LoyaltyDisplay.desc=Highlight the effect of loyalty and mother club bonus on your personal player page (Works only with 'Show skill bars' option enabled in HT preferences)
 foxtrick.ForumAlterHeaderLine.desc=Alters posting header line
 foxtrick.Singleline2.desc=Alternative ForumHeader single line module. Slightly faster than the other versions. Disables some conflicting forum post changing modules.
 # please translate next lines again if needed
@@ -680,8 +680,8 @@ Stamina.abbr=Stm
 Form=Form
 Form.abbr=Fo
 
-Loyality=Loyality
-Loyality.abbr=Lo
+Loyalty=Loyalty
+Loyalty.abbr=Lo
 MotherClubBonus=Mother club bonus
 MotherClubBonus.abbr=MB
 
