team-stats.js: filter string back (feature not working currently for me though)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8606 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -434,7 +434,7 @@ foxtrick.TeamStats.NotTransferListed.label=Not Transfer-listed
 foxtrick.TeamStats.ActivePlayers.label=Active players
 foxtrick.TeamStats.HomeGrownPlayers.label=Home grown players
 foxtrick.TeamStats.PurchasedPlayers.label=Purchased players
-
+foxtrick.TeamStats.FilterFor=Filter for
 
 #season stats
 #note to translators. use abreviations of league table where applicable
