--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1186,6 +1186,6 @@ foxtrick.prefs.AdditionalOptions=General options
 foxtrick.prefs.smallcopyicons=Show copy icons in the header instead of sidebar
 foxtrick.prefs.DisplayHTMLDebugOutput=Show FoxTrick log on bottom of pages (for debugging)
 
-foxtrick.prefs.permissionsHint=%s needs permission to work. Allow access in the following dialog.
+foxtrick.prefs.permissionsHint=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
 
 ###EOF
