Experimental: Added Tournaments to rapid-id (not many people will notice it anyway)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8707 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -936,9 +936,6 @@ CurrentBidderShort=Current highest bidder
 CurrentBidderShort.abbr=Bd
 
 
-Senior=Senior
-Youth=Youth
-
 team.status.booked=Friendly booked
 ShowFriendlyBooked.ShowFriendlies=Show friendlies
 
@@ -955,6 +952,10 @@ maximum=Maximum
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 foxtrick.RapidId.ViewById=View by ID
+Senior=Senior
+Youth=Youth
+Tournaments=Tournaments
+Tournament=Tournament
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Switch the view of the table.
