CopyMatchID active for Tournament matches
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8754 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -241,7 +241,7 @@ foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
 foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 #CopyMatchID
-foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly icon on matches or matches archive page. For supporters works as well on the 'Head to Head' page ('Latest matches' and 'History' tabs).
+foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly/tournament icon on matches or matches archive page. For supporters works as well on the 'Head to Head' page ('Latest matches' and 'History' tabs).
 foxtrick.HeaderFix.desc=Fixes the Header while scrolling (affects also on other pages of HT)
 foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
 foxtrick.CopyRatings.desc=Add links to ratings table on match report page for copying ratings (in HT-ML)
