Added forum-youth-icons for Tournaments
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8776 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -79,6 +79,8 @@ foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regu
 foxtrick.ForumYouthIcons.symbols.desc=Adds icon for below symbols. Entries are separated by semi-colons. To use a semi-colon enter "/;".
 foxtrick.ForumYouthIcons.debug.desc=Adds icon for FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Adds icon for FoxTrick settings
+foxtrick.ForumYouthIcons.tournament.desc=Adds icon for TournamentID
+foxtrick.ForumYouthIcons.tournament_match.desc=Adds icon for TournamentMatchID
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e. 'pre' element)
 foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Shows nested quotes in a spoiler. Specify the level below.
@@ -488,11 +490,14 @@ CopyPosting.style.raw=raw
 CopyPosting.style.last=last
 
 ForumYouthIcons.label=Youth Links
+ForumYouthIcons.labelTournament=Tournaments
 ForumYouthIcons.labelToolbar=Main Links
 ForumYouthIcons.youthplayerid=Insert youth player tag.
 ForumYouthIcons.youthteamid=Insert youth team tag.
 ForumYouthIcons.youthmatchid=Insert youth match tag.
 ForumYouthIcons.youthseries=Insert youth series tag.
+ForumYouthIcons.tournamentid=Insert tournament tag.
+ForumYouthIcons.tournamentmatchid=Insert tournament match tag.
 
 ForumOtherIcons.label=Other
 ForumOtherIcons.debug=Insert FoxTrick debug log.
