chrome manifest.json: remove 'any page' permission
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8824 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -192,8 +192,7 @@
 			"*://*.hattrick.name/*",
 			"*://*.hat-trick.net/*",
 			"*://*.hattrick.interia.pl/*",
-			"*://*.hattrick.uol.com.br/*",
-			"*://*/*"
+			"*://*.hattrick.uol.com.br/*"
 		],
 		"run_at" : "document_start"
 	} ],
